--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-lib_deps = knolleary/PubSubClient @ ^2.8
+lib_deps = 
+	knolleary/PubSubClient @ ^2.8
+	adafruit/Adafruit MCP4725 @ ^2.0.0
